# AgentCowork

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  README.zh.md  agent-as-app-design-doc.md  buglist.txt  diff_core.txt  diff_output.txt  overview.md  plan.md  test.md
.opencode/: opencode.json  style-guide.md
apps/acowork-desktop/: index.html  package-lock.json  package.json
apps/rollball-desktop/: package-lock.json  package.json
assets/: offline_providers.json
assets/lsp_install/: clangd.ps1  clangd.sh  css.ps1  css.sh  go.ps1  go.sh  html.ps1  html.sh  java.ps1  java.sh  json.ps1  json.sh  markdown.ps1  markdown.sh  python.ps1  python.sh  rust.ps1  rust.sh  typescript.ps1  typescript.sh  yaml.ps1  yaml.sh
core/: Cargo.toml
core/acowork-core/: Cargo.toml
core/acowork-gateway/: Cargo.toml
core/acowork-grafeo/: Cargo.toml
core/acowork-tool-sdk/: Cargo.toml
core/rollball-tool-sdk/: Cargo.toml
core/rollball-tool-sdk/examples/: image_filter.rs
core/rollball-tool-sdk/src/: exports.rs  lib.rs  tool.rs
dev/: _f6.py  _fix_compile.py  _fix_grpc.py  _fix_guard2.py  _patch_cli2.py  build-agent.ps1  build-agent.sh  build_core.ps1  build_core.sh  build_macos.sh  ci.sh  e2e_stop_test.ps1  ort_env.js  package_desktop_linux.sh  package_desktop_macos.sh  package_desktop_windows.ps1  setup_ort.ps1  setup_ort.sh
docs/: 00-prd.md  01-overview.md  02-agent-package.md  03-agent-runtime.md  04-gateway.md  05-memory.md  06-communication.md  07-system-agent.md  08-security.md  09-roadmap-and-scenarios.md  12-tool-system.md  AGENTS.md  prd-ui-ux.md
(+658 files in other folders)
